--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 
 <body>
+    <div class="text-center">
+  <button id="themeToggle" class="btn btn-secondary my-2">Switch to Dark Mode</button>
+</div>
+
   <div class="container">
       <div class="py-5">
           <h3>Bookmarker
