--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 
 
 <body>
-    <div class="text-center">
-  <button id="themeToggle" class="btn btn-secondary my-2">Switch to Dark Mode</button>
+   <div class="text-center">
+  <button id="themeToggle" class="theme-toggle">
+    <i id="themeIcon" class="fas fa-sun"></i>
+  </button>
 </div>
+
 
   <div class="container">
       <div class="py-5">
